Landing Page w/ Login Modal

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -34,12 +34,15 @@ main#loginform {
 	background-color: #009CDE;
 	padding:0;
 	}
-#loginform button {
+#loginform button, #loginmodal button {
 	margin: 0 auto;
 	margin-top: 2em;
 	margin-bottom: 2.9em;
 	}
-#loginform .headlinecontainer {
+#loginmodal button {
+	margin-top: 3.5em;
+	}
+.headlinecontainer {
 	text-align: center;
 	margin: 3em 0 .8em 0;
 	color:#fff;
@@ -50,11 +53,14 @@ main#loginform {
 	width: 2.5em;
     vertical-align: middle;
 	}
-#loginform .maincontainer {
+.headlinecontainer h1 {
+    font-size: .8em;
+	}
+.maincontainer {
 	padding: 1em 6em;
 	padding-top:0;
 	}
-#loginform .maincontainer.bottom {
+.maincontainer.bottom {
 	height: 4.2em;
 	background-color:#eee;
 	padding:1em;
@@ -768,12 +774,8 @@ td:focus {
 	-moz-border-top-left-radius:2px;
 	border-top-left-radius:2px;
 	}
-#dashsectionscontainer, #landingpagecontainer  {
+#dashsectionscontainer  {
 	padding: 0 27px 0 27px;
-	}
-#landingpagecontainer  {
-	background-color: #555;
-	color:#fff;
 	}
 #landingpagecontent .col-sm-6  {
 	min-height: 10em;
@@ -787,6 +789,12 @@ td:focus {
 	-webkit-border-radius:2px;
 	-moz-border-radius:2px;
 	border-radius:2px;
+	-webkit-border-top-left-radius:0;
+	-moz-border-top-left-radius:0;
+	border-top-left-radius:0;
+	-webkit-border-top-right-radius:0;
+	-moz-border-top-right-radius:0;
+	border-top-right-radius:0;
 	}
 #landingpagecontent h2  {
 	font-size: 1.5em;
@@ -806,7 +814,15 @@ td:focus {
 #landingpagemain h1 {
 	margin-bottom: .3em;
 	}
-main#landingpagemain {
+#landingpagemain {
+	background-color: #555;
+	color:#fff;
+	padding:5em;
+	-webkit-border-radius:3em;
+	-moz-border-radius:3em;
+	border-radius:3em;
+	}
+main #loginform .landingpagemain {
 	background-color: #555;
 	padding:5em;
 	-webkit-border-radius:1.3em;
@@ -1659,9 +1675,6 @@ input:checked + .slider #off {
     margin: 0;
 	margin-top: -6px;
 	font-size:2.8em
-	}
-#loginmodal button {
-	margin-top: 3.5em;
 	}
 #loginform #loginmodal label {
     color: #004C97;
