--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -56,6 +56,9 @@ main#loginform {
 .headlinecontainer h1 {
     font-size: .8em;
 	}
+.headlinecontainer h2 {
+    margin-top: 1em;
+	}
 .maincontainer {
 	padding: 1em 6em;
 	padding-top:0;
