--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -236,7 +236,6 @@ section .breadcrumb-steps {
 	height:100%;
 	}
 .breadcrumb-steps .active span, .breadcrumb-steps .done span {
-    text-shadow: #000 0 1px 1px;
 	-webkit-clip-path: 	polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
 	clip-path: 			polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
 	position: absolute;
@@ -252,13 +251,11 @@ section .breadcrumb-steps {
     font-weight: bold;
 	}
 .breadcrumb-steps span {
-    text-shadow: #000 0 1px 1px;
 	-webkit-clip-path: 	polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
 	clip-path: 			polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
 	position: absolute;
     left: 8px;
 	background-color:#D9D9D6;
-	text-shadow: rgba(255, 255, 255, 0.5) 0 1px;
 	line-height: 50px;
     width: 35px;
     text-align: center;
@@ -267,7 +264,6 @@ section .breadcrumb-steps {
 	}
 .breadcrumb-steps .active {
     color: #fff;
-    text-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px;
 	background-color: #009CDE;
 	border-bottom-color: #003c70;
     font-weight: bold;
@@ -277,7 +273,6 @@ section .breadcrumb-steps {
 	background-color: #009CDE;
 	border-bottom-color: #003c70;
     font-weight: normal;
-	text-shadow:none;
 	}
 div.breadcrumb-steps {
     background-color: #1077b9;
@@ -297,7 +292,6 @@ div.breadcrumb-steps {
     color: #808080;
     background-color: #f5f5f5;
     font-size: 13px;
-    text-shadow: rgba(255, 255, 255, 0.5) 0 1px;
     -webkit-box-shadow: inset -7px 0 10px -10px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: inset -7px 0 10px -10px rgba(0, 0, 0, 0.5);
     box-shadow: inset -7px 0 10px -10px rgba(0, 0, 0, 0.5);
@@ -313,9 +307,6 @@ div.breadcrumb-steps {
 /* END progress tracker*/
 
 /*NAVBAR top*/
-.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
-    text-shadow: 0 0 0 rgba(0,0,0,0);
-	}
 .navbar-inverse {
 	-webkit-border-radius: 	0;
     -moz-border-radius: 	0;
@@ -2658,6 +2649,10 @@ footer #megamenu ul {
     	display: table-cell!important;
 		padding-right:17px!important;
 		padding-left:17px;
+	}
+}
+@media (min-width: 528px) and (max-width:1100px) { 
+	.breadcrumb-steps p {
 		font-size: .82em;
 	}
 }
