--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1221,7 +1221,6 @@ p#lead {
 	font-weight:600;
 	}
 span.weight600 {
-	color:#E4002B;
 	font-weight:normal;
 	}
 #success span.weight600 {
@@ -1244,9 +1243,12 @@ span.weight600 {
 .checkbox-inline, .radio-inline {
     padding-left: 21px;
 	}
-input[type=date]::-webkit-inner-spin-button, input[type=month]::-webkit-inner-spin-button {
+input[type="date"]::-webkit-inner-spin-button, input[type=month]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     display: none;
+	}
+.disabled {
+	cursor: url('../images/cusor_not_allowed.png'), auto!important;
 	}
 label {
     font-weight: 400;
@@ -1342,14 +1344,9 @@ label.hasinfo {
 	  background: #004C97; 
 	}
 /*BUTTONS*/
-button[disabled] {
-    background-color: #eee!important;
-	}
-label.disabled {
-	color:#ddd;
-	}
-label.disabled span {
-    border-color: #eee!important;
+.btn-success.disabled, .btn-success.disabled.active, .btn-success.disabled.focus, .btn-success.disabled:active, .btn-success.disabled:focus, .btn-success.disabled:hover, .btn-success[disabled], .btn-success[disabled].active, .btn-success[disabled].focus, .btn-success[disabled]:active, .btn-success[disabled]:focus, .btn-success[disabled]:hover, fieldset[disabled] .btn-success, fieldset[disabled] .btn-success.active, fieldset[disabled] .btn-success.focus, fieldset[disabled] .btn-success:active, fieldset[disabled] .btn-success:focus, fieldset[disabled] .btn-success:hover {
+    background-color: #cdd8dc!important;
+	cursor: url('../images/cusor_not_allowed.png'), auto!important;
 	}
 .inlinebuttons {
 	margin:0 auto;
@@ -1411,10 +1408,10 @@ label.disabled span {
   	box-shadow:         rgb(0,0,0);
 	text-shadow: 0 0 0 transparent;
 	}
-.resetphonebtn {
+.resetphonebtn, .resetregbtn, .resetdktrefbtn {
 	margin: 0 auto;
     float: none;
-    margin-top: .57em;
+    margin-top: .545em;
 	}
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus, div[role="radio"]:focus, .btn-success.active.focus, .btn-success.active:focus, .btn-success.focus, .btn-success:active.focus, .btn-success:active:focus, .btn-success:focus, .btn-sm.active.focus, .btn-sm.active:focus, .btn-sm.focus, .btn-sm:active.focus, .btn-sm:active:focus, .btn-sm:focus, .close.active.focus, .close.active:focus, .close.focus, .close:active.focus, .close:active:focus, .close:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.focus, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:focus {
     /*outline: thin dotted;*/
@@ -1634,10 +1631,13 @@ button#moreoptionsbtn {
 #preferences .modal-body {
     padding-bottom: 3em;
 	}
-.addphoneinitial {    
-	width: 60%!important;
+.addphoneinitial, .addinitial {    
+	width: 80%!important;
     margin: 0 auto!important;
     float: none!important;
+	}
+#detected .addinitial {    
+	width: 90%!important;
 	}
 /*toggle button*/
 #designwithtext .required {
@@ -1973,6 +1973,7 @@ input.form-control, textarea.form-control, select.form-control {
     -webkit-border-radius: 	2px;
 	-moz-border-radius: 	2px;
 	border-radius: 			2px;
+	max-width: 100%;
 	}
 select.form-control {
     height: 38px!important;
@@ -2062,7 +2063,7 @@ label.form-check-label {
     margin-left: 2.7em;
 	}
 /*RADIOS*/
-input[type=radio] {
+input[type="radio"] {
 	margin:0;
 	background-color: #009CDE;
 	}
@@ -2181,7 +2182,7 @@ p#upimagetwo, p#upimagethree, p#upimagefour {
 p#upimage {
 	margin-bottom:.6em;
 	}
-#attorney input[type=file], #owner input[type=file], #uploadmark input[type=file], #yesnps input[type=file], #basisabde input[type=file], #detected input[type=file], #gridview input[type=file] {
+#attorney input[type="file"], #owner input[type="file"], #uploadmark input[type="file"], #yesnps input[type="file"], #basisabde input[type="file"], #detected input[type="file"], #gridview input[type="file"] {
 	width: 0.1px;
 	height: 0.1px;
 	opacity: 0;
@@ -2221,7 +2222,7 @@ p#upimage {
 .alert-success { 
 	background-image:none!important;
 	}
-button[type=submit] {
+button[type="submit"] {
 	margin: 0 auto;
 	float: none;
 	}
@@ -2356,12 +2357,12 @@ button[type=submit] {
 	margin: 0 auto;
 	height:1em;
 	}
-#editowner button.close, #reviewattorney button.close, #userprofilepage button.close, #yesattorneyfiling button.close, .phones button.close {
+#editowner button.close, #reviewattorney button.close, #userprofilepage button.close, #yesattorneyfiling button.close, .phones button.close, #detected button.close, #designwithtext button.close, #basisabde button.close {
     font-size: 3em;
 	height:1.06em;
 	color:#009CDE;
 	}
-#editowner button.close:hover, #reviewattorney button.close:hover, #userprofilepage button.close:hover, #yesattorneyfiling button.close:hover {
+#editowner button.close:hover, #reviewattorney button.close:hover, #userprofilepage button.close:hover, #yesattorneyfiling button.close:hover, #detected button.close:hover, #designwithtext button.close:hover, #basisabde button.close:hover {
 	color: #047db0;
 	opacity:1.0;
 	-moz-opacity: 1.0;
