Add + Remove Additional (Name, Portrait, Signature, Translate, Transliterate)
This completes the design and dev pattern updates to all 'Add' + 'Remove' components.

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1412,7 +1412,7 @@ label.hasinfo {
   	box-shadow:         rgb(0,0,0);
 	text-shadow: 0 0 0 transparent;
 	}
-.resetphonebtn, .resetregbtn, .resetdktrefbtn {
+.resetphonebtn, .resetregbtn, .resetdktrefbtn, .resetnamebtn, .resetportraitbtn, .resetportraitbtn, .resetsignaturebtn, .resettranslationbtn, .resettransliterationbtn {
 	margin: 0 auto;
     float: none;
     margin-top: .545em;
