--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -5,6 +5,7 @@
 	font-weight: normal;
     font-style: normal;
 	font-size: 100%;
+	text-shadow: 0 0 0 rgba(0,0,0,0)!important;
 	}
 html {
 	/*height:auto;*/
@@ -2360,6 +2361,9 @@ button[type="submit"] {
 	color:#111;
 	margin: 0 auto;
 	height:1em;
+	}
+#gsselected button.close {
+	height:1.4em;
 	}
 #editowner button.close, #reviewattorney button.close, #userprofilepage button.close, #yesattorneyfiling button.close, .phones button.close, #detected button.close, #designwithtext button.close, #basisabde button.close {
     font-size: 3em;
